k8s/15-secrets-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-secrets
